  * gcc: Prefix LLINKER with /usr/bin/time -v.
  * Don't build runtime libraries for the jit build.
  * Apply proposed fix for PR go/98496 (Svante Signell).
  * Work around PR ada/98228, not using lto for gnat1 on s390x.
  * PR sanitizer/98699: Don't enable --as-needed with -fsanitize=* options.
  * Use --push-state/--pop-state for gold everywhere.
  * Fix parallel linking of cc1gm2.

 -- Matthias Klose <doko@debian.org>  Tue, 12 Jan 2021 14:40:39 +0100

gcc-11 (11-20210110-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20210110)
  * Build the gcn offload compiler based on amdgcn-tools (based on LLVM 9),
    remove the conflict with gcc-10-offload-amdgcn.
  * Limit lto links on sparc64.

 -- Matthias Klose <doko@debian.org>  Sun, 10 Jan 2021 13:01:43 +0100

gcc-11 (11-20210109-2) experimental; urgency=medium

  * Support link serialization for m2.
  * Fix -Wformat-diag warnings for power*-linux builds.

 -- Matthias Klose <doko@debian.org>  Sat, 09 Jan 2021 20:27:49 +0100

gcc-11 (11-20210109-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20210109)
  * Provide timing and resource information for all builds.
  * Build the offload compilers using newlib 4.1.0.
  * gcc-11-source: Depend on time.
  * Disable the lto build on s390x, PR ada/98228.

 -- Matthias Klose <doko@debian.org>  Sat, 09 Jan 2021 18:48:15 +0100

gcc-11 (11-20210102-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20210102)
  * Bump libgo soname.
  * Fix libgo build failures.

 -- Matthias Klose <doko@debian.org>  Sat, 02 Jan 2021 15:59:18 +0100

gcc-11 (11-20201228-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20201228)
  * Build the gcn offload compiler based on amdgcn-tools (based on LLVM 9).
  * Fix hppa64 snapshot builds.
  * Fix cross installation of g++-mapper-server.
  * Update libgcc-s1 symbols file for arm64.

 -- Matthias Klose <doko@debian.org>  Mon, 28 Dec 2020 20:02:27 +0100
