@@ -479,6 +479,10 @@ ifeq ($(with_m2),yes)
   GM2_BUILD_DEP = python3:any,
 endif
 
+ifeq ($(usage_stats),yes)
+  USAGE_BUILD_DEP = python3:any, python3-psutil, python3-matplotlib,
+endif
+
 ifneq ($(DEB_CROSS),yes)
 # all archs for which to create b-d's
 any_archs := alpha amd64 armel armhf arm64 i386 mips mipsel mips64 mips64el mipsn32 powerpc ppc64 ppc64el m68k riscv64 sh4 sparc64 s390x x32
@@ -699,6 +703,7 @@ ctrl_flags += \
 	-DPHOBOS_BUILD_DEP="$(PHOBOS_BUILD_DEP)" \
 	-DGM2_BUILD_DEP="$(GM2_BUILD_DEP)" \
 	-DOFFLOAD_BUILD_DEP="$(OFFLOAD_BUILD_DEP)" \
+	-DUSAGE_BUILD_DEP="$(USAGE_BUILD_DEP)" \
 	-DLLVM_DEP="$(LLVM_DEP)" \
 	-DMULTILIB_ARCHS="$(multilib_archs)" \
 	-DTP=$(TP) \
