@@ -387,6 +387,10 @@ ifneq ($(findstring gccdebug, $(DEB_BUILD_OPTIONS)),)
   export DEB_BUILD_OPTIONS
 endif
 
+ifeq ($(build_type),build-native)
+  usage_stats = yes
+endif
+
 # -------------------------------------------------------------------
 # stage options
 ifdef DEB_STAGE
