@@ -10,6 +10,7 @@ gcc-11 (11-20210112-1) UNRELEASED; urgency=medium
   * PR sanitizer/98699: Don't enable --as-needed with -fsanitize=* options.
   * Use --push-state/--pop-state for gold everywhere.
   * Fix parallel linking of cc1gm2.
+  * Allow to build with some memory usage statistics.
 
  -- Matthias Klose <doko@debian.org>  Tue, 12 Jan 2021 14:40:39 +0100
 
